# kernel-development

./: .gitignore  CMakeLists.txt  Makefile  iso.sh  toolchain.cmake
kernel/: CMakeLists.txt  Makefile  myos.kernel
kernel/arch/i386/: boot.s  boot_gdt.s  boot_idt.s  boot_irq_handler.s  boot_isr_handler.s  crtn.s  flags.cmake  gdt.c  idt.c  irq_handler.c  isr_handler.c  keyboard.c  linker.ld  make.config  pic.c  tty.c
kernel/arch/i386/boot/: boot.s
kernel/arch/i386/data_tables/: boot_idt.s  gdt.c  idt.c
kernel/arch/i386/drivers/: keyboard.c  pic.c  tty.c
kernel/arch/i386/irq/: irq_handler.c
kernel/arch/i386/isr/: boot_isr_handler.s  isr_handler.c
kernel/include/: CMakeLists.txt  Makefile
kernel/include/kernel/: gdt.h  idt.h  irq_handler.h  isr_handler.h  pic.h
kernel/include/kernel/drivers/: keyboard.h  pic.h
kernel/include/kernel/isr/: isr_handler.h
kernel/kernel/: kernel.c
libc/: CMakeLists.txt  Makefile  Makefile.bak
libc/arch/i386/: flags.cmake
libc/include/: CMakeLists.txt  Makefile  stdio.h  system.h
libc/stdio/: printf.c  putchar.c
libc/system/: port.c
